--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
     </div>
 
     <div class="container2">
-        <h1>Al-Qur'an <font color=orange>Hadist</font></h1>
+        <h1>Cara Mengikuti <font color=orange> <br> Mengaji Bersama</font></h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum <br> provident aut expedita quod quas magnam beatae corporis repudiandae <br> ad, ab sunt est consectetur nulla. Numquam ea accusamus amet lores</p>
+    </div>
+    <div class="container3">
+
     </div>
     
 
