menambah fitur button di container 2

--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     <div class="container2">
         <h1>Cara Mengikuti <font color=orange> <br> Mengaji Bersama</font></h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum <br> provident aut expedita quod quas magnam beatae corporis repudiandae <br> ad, ab sunt est consectetur nulla. Numquam ea accusamus amet lores</p>
-    </div>
-    <div class="container3">
-
+        <a href="#">Lihat Selengkapnya <i class="fa-solid fa-chevron-right"></i></a>
     </div>
     
 
