membuat footer copyright

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum <br> provident aut expedita quod quas magnam beatae corporis repudiandae <br> ad, ab sunt est consectetur nulla. Numquam ea accusamus amet lores</p>
         <a href="#">Lihat Selengkapnya <i class="fa-solid fa-chevron-right"></i></a>
     </div>
-    
+    <div class="footer">
+        <p>	&#169;Copyright Ngaji Yuk. All Right Reserved</p>
+    </div>
 
 </body>
 </html>
